# kogan

./: Cargo.toml  Procfile  README.md
graphql/: query.graphql
graphql/kogan/: package.json
src/: handler.rs  hooks.rs  lib.rs  main.rs
src/commands/: about.rs  announce.rs  emoji.rs  help.rs  mod.rs  rules.rs
src/commands/anime/: anime.rs  announce.rs  countdown.rs  favorite.rs  favorites.rs  info.rs  mod.rs  recommend.rs  trending.rs
src/commands/misc/: translate.rs
src/commands/track/: announce.rs  info.rs  mod.rs  track.rs
src/components/: anilist.rs  animal.rs  kitsu.rs  mod.rs  sounds.rs
src/graphql/: anilist.rs  info.txt  mod.rs  query.graphql
src/services/: mod.rs  user_service.rs
src/types/: openai.rs
