[package]
name = "kogan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.11", default-features = true, features = [
  "collector",
] }
tokio = { version = "1.18.1", features = ["full"] }
rand = { version = "0.8.5", features = ["small_rng"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.81"
